recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:7: error: identifier expected but '}' found.
  }
  ^FourSquare:14: error: identifier expected but ')' found.
    avance(100.)
               ^FourSquare:15: error: identifier expected but ')' found.
  	droite(90.)
                  ^